Fix typo in attributes string

--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -328,7 +328,7 @@
         Aura Unique |
         Failure Breaks Stealth |
         Far Sight |
-        Track Target while Channel;ing |
+        Track Target while Channeling |
         Remove Auras on Immunity |
         Immunity to Hostile and Friendly Effects |
         No AutoCast (AI) |
