--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -1046,6 +1046,11 @@
     </Grid>
     <controls:MetroWindow.RightWindowCommands>
         <controls:WindowCommands>
+            <Button Name="DebugButton" Click="DebugButtonClick">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Debug" VerticalAlignment="Center"/>
+                </StackPanel>
+            </Button>
             <Button Name="ConfigButton" Click="ConfigButtonClick">
                 <StackPanel Orientation="Horizontal">
                     <TextBlock Text="{DynamicResource butConfig}" VerticalAlignment="Center"/>
