--- a/Documentation/Languages/enUS.xaml
+++ b/Documentation/Languages/enUS.xaml
@@ -975,7 +975,7 @@
 	Mod Attack Power By Stat % |
 	Ignore Target Resist |
 	Ability Ignores Target Resist |
-	Unused_270 |
+	Mod dmg From Caster |
 	Ignore Melee Reset |
 	X-Ray |
 	Abiltiy Consumes No Ammo |
