--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -1016,19 +1016,19 @@
                             </Grid.ColumnDefinitions>
                             <!-- Display effect details -->
                             <Label Content="{DynamicResource VisualEffectId}" Grid.Row="1" Grid.Column="0" Margin="10,5,10,5"/>
-                            <TextBox Name="VisualMissileEffectIdTxt" Grid.Row="1" Grid.Column="1" Margin="10,5,10,5" MinWidth="300" MaxHeight="30" VerticalAlignment="TOP"  IsEnabled="False"/>
+                            <TextBox Name="VisualMissileEffectIdTxt" Grid.Row="1" Grid.Column="1" Margin="10,5,10,5" MinWidth="300" MaxHeight="30" VerticalAlignment="TOP"  IsReadOnly="true"/>
                             <Label Content="{DynamicResource VisualEffectName}" Grid.Row="2" Grid.Column="0" Margin="10,5,10,5"/>
-                            <TextBox Name="VisualMissileEffectNameTxt" Grid.Row="2" Grid.Column="1" Margin="10,5,10,5" MinWidth="300" MaxHeight="30" VerticalAlignment="TOP" IsEnabled="False"/>
+                            <TextBox Name="VisualMissileEffectNameTxt" Grid.Row="2" Grid.Column="1" Margin="10,5,10,5" MinWidth="300" MaxHeight="30" VerticalAlignment="TOP" IsReadOnly="true"/>
                             <Label Content="{DynamicResource VisualEffectFilePath}" Grid.Row="3" Grid.Column="0" Margin="10,5,10,5"/>
-                            <TextBox Name="VisualMissileEffectFilePathTxt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5" MinWidth="300" MaxHeight="30" VerticalAlignment="TOP" IsEnabled="False"/>
+                            <TextBox Name="VisualMissileEffectFilePathTxt" Grid.Row="3" Grid.Column="1" Margin="10,5,10,5" MinWidth="300" MaxHeight="30" VerticalAlignment="TOP" IsReadOnly="true"/>
                             <Label Content="{DynamicResource VisualEffectAreaEffectSize}" Grid.Row="4" Grid.Column="0" Margin="10,5,10,5"/>
-                            <TextBox Name="VisualMissileEffectAreaEffectSizeTxt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsEnabled="False"/>
+                            <TextBox Name="VisualMissileEffectAreaEffectSizeTxt" Grid.Row="4" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsReadOnly="true"/>
                             <Label Content="{DynamicResource VisualEffectScale}" Grid.Row="5" Grid.Column="0" Margin="10,5,10,5"/>
-                            <TextBox Name="VisualMissileEffectScaleTxt" Grid.Row="5" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsEnabled="False"/>
+                            <TextBox Name="VisualMissileEffectScaleTxt" Grid.Row="5" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsReadOnly="true"/>
                             <Label Content="{DynamicResource VisualEffectMinScale}" Grid.Row="6" Grid.Column="0" Margin="10,5,10,5"/>
-                            <TextBox Name="VisualMissileEffectMinAllowedScaleTxt" Grid.Row="6" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsEnabled="False"/>
+                            <TextBox Name="VisualMissileEffectMinAllowedScaleTxt" Grid.Row="6" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsReadOnly="true"/>
                             <Label Content="{DynamicResource VisualEffectMaxScale}" Grid.Row="7" Grid.Column="0" Margin="10,5,10,5"/>
-                            <TextBox Name="VisualMissileEffectMaxAllowedScaleTxt" Grid.Row="7" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsEnabled="False"/>
+                            <TextBox Name="VisualMissileEffectMaxAllowedScaleTxt" Grid.Row="7" Grid.Column="1" Margin="10,5,10,5" MinWidth="150" MaxHeight="30" VerticalAlignment="TOP" IsReadOnly="true"/>
                             <!-- Main list box for selecting effect -->
                             <Label Content="{DynamicResource VisualEffectMissileList}" Grid.Row="0" Grid.Column="2" Margin="10,5,10,5"/>
                             <ListBox x:Name="VisualMissileEffectList" Grid.Row="1" Grid.RowSpan="10" Grid.Column="2" Grid.ColumnSpan="2" Margin="5" Width="350" MaxHeight="600" BorderThickness="1"/>
